SONAR-15244 Use G1GC for Elasticsearch
(cherry picked from commit 7b8885e93c0e9c48d0d4c4b0e4651d9afc3e916b)